--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,22 @@
 <div class="home__container">
-  <app-card></app-card>
+  <app-card gameCover="assets/bt-hardline.jpg" gameLabel="Digital" gameType="Digital | PS4" gamePrice="R$ 129,99">
+  </app-card>
+
+  <app-card gameCover="assets/bt-4.jpg" gameLabel="Exclusive" gameType="DISC | PS5"
+   gamePrice="R$ 269,99">
+  </app-card>
+
+  <app-card gameCover="assets/bt-5.jpg" gameLabel="New" gameType="Digital | PS3 PS4 PS5"
+   gamePrice="R$ 369,99">
+  </app-card>
+  <app-card gameCover="assets/bt-1.jpg" gameLabel="Digital" gameType="Digital | PS4  PS5" gamePrice="R$ 200,00">
+  </app-card>
+
+  <app-card gameCover="assets/bt-bad-company-2.jpg" gameLabel="Exclusive" gameType="DISC | PS5"
+   gamePrice="R$ 469,99">
+  </app-card>
+
+  <app-card gameCover="assets/ac-cover.jpg" gameLabel="New" gameType="New | PS3 PS4 PSS"
+   gamePrice="R$ 539,99">
+  </app-card>
 </div>
